RESOLVED FIXED 196610
Fix rare crash under collectRelatedCoordinatedScrollingNodes()
https://bugs.webkit.org/show_bug.cgi?id=196610
Summary Fix rare crash under collectRelatedCoordinatedScrollingNodes()
Simon Fraser (smfr)
Reported 2019-04-04 09:27:52 PDT
Fix rare crash under collectRelatedCoordinatedScrollingNodes()
Attachments
Patch (2.28 KB, patch)
2019-04-04 09:30 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2019-04-04 09:30:05 PDT
Simon Fraser (smfr)
Comment 2 2019-04-04 09:30:08 PDT
WebKit Commit Bot
Comment 3 2019-04-04 14:47:34 PDT
Comment on attachment 366723 [details] Patch Clearing flags on attachment: 366723 Committed r243908: <https://trac.webkit.org/changeset/243908>
WebKit Commit Bot
Comment 4 2019-04-04 14:47:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.