Fix rare crash under collectRelatedCoordinatedScrollingNodes() https://bugs.webkit.org/show_bug.cgi?id=196610 rdar://problem/49595426

Reviewed by Zalan Bujtas.

hasCompositedScrollableOverflow() doesn't check whether a layer is composited (it has
to report the right status before layers have been created), so collectRelatedCoordinatedScrollingNodes()
needs to check whether there's backing.

* rendering/RenderLayerCompositor.cpp:
(WebCore::collectRelatedCoordinatedScrollingNodes):


Canonical link: https://commits.webkit.org/210898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243908 268f45cc-cd09-0410-ab3c-d52691b4dbfc